--- a/ansible/ansible/playbook.yml
+++ b/ansible/ansible/playbook.yml
@@ -5,48 +5,69 @@
   become: true
   tasks:
 
-    # Task to unhold held packages (if any)
+    # Task to unhold containerd and containerd.io if they are held
     - name: Unhold containerd and containerd.io if held
       shell: |
-        sudo apt-mark unhold containerd
-        sudo apt-mark unhold containerd.io
+        apt-mark unhold containerd || true
+        apt-mark unhold containerd.io || true
       ignore_errors: yes
 
-    # Task to remove the conflicting containerd package if it exists
-    - name: Remove containerd package if it exists
+    # Task to remove the conflicting containerd package
+    - name: Remove conflicting containerd package
       apt:
         name: containerd
         state: absent
         force: yes
       ignore_errors: yes
 
-    # Task to update apt cache
+    # Task to remove containerd.io if it was partially installed or in conflict
+    - name: Remove containerd.io if partially installed
+      apt:
+        name: containerd.io
+        state: absent
+        force: yes
+      ignore_errors: yes
+
+    # Task to clean up the apt cache
+    - name: Clean up apt cache
+      apt:
+        autoclean: yes
+        autoremove: yes
+
+    # Task to update the apt cache
     - name: Update apt cache
       apt:
         update_cache: yes
 
-    # Task to install Docker and containerd.io
+    # Task to install Docker.io
     - name: Ensure Docker is installed
       apt:
-        name:
-          - docker.io
-          - containerd.io
+        name: docker.io
         state: present
 
     # Task to build the Docker image
     - name: Build the Docker image
-      command: docker build -t simple-web-appp ../
+      command: docker build -t simple-web-app ../
       args:
         chdir: "../"
+      ignore_errors: yes  # Ensure it doesn't fail if Dockerfile or context isn't found
+
+    # Task to ensure any existing containers are stopped and removed
+    - name: Stop and remove existing Docker container (if exists)
+      shell: |
+        docker stop simple-web-app || true
+        docker rm simple-web-app || true
+      ignore_errors: yes
 
     # Task to run the Docker container
     - name: Run the Docker container
-      command: docker run -d -p 8080:80 --name simple-web-app simple-web-appp
+      command: docker run -d -p 8080:80 --name simple-web-app simple-web-app
+      ignore_errors: yes  # Ensure it doesn't fail on conflicts
 
-    # Task to ensure the container is running
+    # Task to ensure the container is running with the correct settings
     - name: Ensure the container is running
       docker_container:
         name: simple-web-app
         state: started
         restart_policy: always
-        image: simple-web-appp
+        image: simple-web-app
