--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,30 +18,31 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Install Docker without pinning a specific version
+      # step 2: Installing Docker
       - name: Install Docker
         run: |
           curl -fsSL https://get.docker.com -o get-docker.sh
           sudo sh get-docker.sh
 
-      # Step 2: Set up Docker
+      # Step 3: Set up Docker
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Step 3: Build the Docker image
+      # Step 4: Build the Docker image
       - name: Build Docker image
         run: docker build -t simple-web-app .
 
-      # Step 4: Run Ansible to configure and deploy
+      # Step 5: Install Ansible
       - name: Install Ansible
         run: |
           sudo apt update
           sudo apt install -y ansible
 
+      # step 6: Run Ansible 
       - name: Run Ansible playbook for deployment
         run: ansible-playbook -i localhost, ansible/ansible/playbook.yml
 
-      # Step 6: Push the Docker image to Docker Hub
+      # Step 7: Push the Docker image to Docker Hub
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
