--- a/ansible/hosts.ini
+++ b/ansible/hosts.ini
@@ -1,5 +1,5 @@
 [webserver]
-0.tcp.in.ngrok.io ansible_connection=ssh ansible_user=krishna ansible_password=Krishna@123 ansible_port=16526
+0.tcp.in.ngrok.io ansible_connection=ssh ansible_user=krishna ansible_password=Krishna@123 ansible_port=16526 ansible_sudo_pass=Krishna@123
 
 ; [webserver]
 ; 127.0.0.1 ansible_connection=ssh ansible_user=krishna ansible_port=16516 ansible_become=true ansible_become_password=Krishna@123
